infrastructure/cilium/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-tls
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: global-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: hubble${INGRESS_SUFFIX}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hubble-ui
            port:
              number: 80
  tls:
  - secretName: hubble-tls
    hosts:
    - hubble${INGRESS_SUFFIX}
